@@ -3,6 +3,8 @@ Change log for Mail::AuthenticationResults
 {{$NEXT}}
         - Added a 'has' search property to allow searching
           for results whose children match a given search.
+        - Add a header 'isa' type to search for top level
+          header entries within a group.
 
 1.20180518 2018-05-18 10:10:03+10:00 Australia/Melbourne
         - Consider CR properly when parsing an entry.
